<resources>
    <string name="app_name" translatable="false">XNAlarm</string>
    <string name="login_to_xnova">Login to XNova</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="xnova_login">XNova Login:</string>
    <string name="xnova_password">XNova pass:</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="local_service_started">XNova Alarm started</string>
    <string name="local_service_label">XNova Alarm Service</string>
    <string name="remember_account">Remember account</string>
    <string name="login_ok">Login OK!</string>
    <string name="xnova_alarm">XNova alarm</string>
    <string name="attack_alarm">Danger!</string>
    <string name="new_messages">%d new msgs</string>
    <string name="last_update">Last upd:</string>
    <string name="alarm_enabled">Alarm enabled</string>
    <string name="refresh_timeout_mins">Refresh interval, minutes:</string>
    <string name="hrs">h</string>
    <string name="mins">m</string>
    <string name="secs">s</string>
    <string name="till_attack">till attack</string>
    <string name="vibrate_on_new_messages">Vibrate on new messages</string>
</resources>